--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/Fersill53/cuddly-chainsaw/issues"
   },
-  "homepage": "https://github.com/Fersill53/cuddly-chainsaw#readme"
+  "homepage": "https://github.com/Fersill53/cuddly-chainsaw#readme",
+  "dependencies": {
+    "inquirer": "^9.2.7",
+    "jest": "^29.6.1"
+  }
 }
